--- a/TestProj_ABP_Frontend/src/styles.scss
+++ b/TestProj_ABP_Frontend/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+// @import "../node_modules/bootstrap/scss/functions";
+
+// $body-bg: #4f939b;
+// $bs-btn-bg: red;
+
+// @import "../node_modules/bootstrap/scss/variables";
+// @import "../node_modules/bootstrap/scss/maps";
+// @import "../node_modules/bootstrap/scss/mixins";
+// @import "../node_modules/bootstrap/scss/root";
+
