Forgot to rename columns

--- a/TestProj_ABP_Frontend/src/app/components/results-table/results-table.component.html
+++ b/TestProj_ABP_Frontend/src/app/components/results-table/results-table.component.html
@@ -3,10 +3,10 @@
   <table class="table">
     <thead>
       <tr>
-        <th>#</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>a</th>
+        <th>Device Token</th>
+        <th>Created at</th>
+        <th>Color test</th>
+        <th>Price test</th>
       </tr>
     </thead>
     <tbody>
