service for price test

--- a/TestProj_ABP_Frontend/src/app/components/products/products.component.html
+++ b/TestProj_ABP_Frontend/src/app/components/products/products.component.html
@@ -29,7 +29,9 @@
           комплект білизни з вареної бавовни leglo mix apricot-slate
         </h5>
         <div class="d-flex justify-content-between pt-2">
-          <a href="#" class="btn btn-primary">Купити</a>
+          <a href="#" [style]="buttonStyle" class="my-btn">
+            <div class="my-btn-label">Купити</div>
+          </a>
           <div class="price-tag align-items-center p-2">Ціна: 10000 грн</div>
         </div>
       </div>
