--- a/TestProj_ABP_Frontend/src/app/components/results-table/results-table.component.html
+++ b/TestProj_ABP_Frontend/src/app/components/results-table/results-table.component.html
@@ -16,7 +16,7 @@
           {{ user.deviceToken }}
         </td>
         <td>
-          {{ user.createdAt }}
+          {{ user.createdAt | date }}
         </td>
         <td>
           {{ user.colorTest }}
