--- a/TestProj_ABP_Frontend/src/app/app.component.html
+++ b/TestProj_ABP_Frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" routerLink="">Online Shop</a>
+    <a class="navbar-brand" routerLink="">ABP Online Shop</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,15 +15,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink=""
-            >Home <span class="sr-only">(current)</span></a
-          >
+          <a class="nav-link" routerLink="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="">Contact</a>
+          <a class="nav-link" routerLink="table">Summary Table</a>
         </li>
       </ul>
     </div>
