--- a/TestProj_ABP_Frontend/src/app/components/products/products.component.css
+++ b/TestProj_ABP_Frontend/src/app/components/products/products.component.css
@@ -1,6 +1,19 @@
-:host{
-    --btn-bg-color: {{buttonColor}}
-    --btn-br-color: {{buttonColor}}
+.my-btn{
+    border: solid;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 12px;
+    padding-right: 12px;
+    border-radius: 6px;
+}
+
+.my-btn-label{
+    color: black;
+    font-family: Montserrat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: .05em;
+    text-transform: uppercase;
 }
 
 .card-title{
@@ -17,12 +30,11 @@
     letter-spacing: .05em;
     text-transform: uppercase;
 }
-.btn{
-    font-family: Montserrat,sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: .05em;
-    text-transform: uppercase;
-}
+
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
+
+:host{
+    --btn-bg-color: {{buttonColor}};
+    --btn-br-color: {{buttonColor}};
+}
